# scGIP-Lab

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  agents.md  environment.yml  pyproject.toml  references.bib
config/: geneformer.example.yml  label_mapping_template.tsv  marker_genes_pbmc.yml  paths.example.yml  plotting.yml
data/: README.md
docs/: geneformer_notes.md  label_harmonization_strategy.md  limitations.md  project_plan.md
experiments/01_embedding_probe/: README.md  config.yml  experiment_1.py  run_embedding_probe.py
experiments/02_perturbation_probe/: README.md  run_perturbation_probe.py
experiments/03_scvi_comparison/: README.md  run_scvi_comparison.py
experiments/04_openset_annotation/: README.md  run_openset_annotation.py
scripts/: 00_check_environment.py  01_summarize_h5ad.py  02_prepare_label_mapping.py  03_extract_geneformer_embeddings.py  04_train_lightweight_classifier.py  05_evaluate_openset.py  check_experiment_1_readiness.py  check_geneformer.py  setup_geneformer.sh  setup_project.sh
src/geneformer_immune_benchmark/: __init__.py  constants.py  embeddings.py  evaluation.py  geneformer_utils.py  io.py  labels.py  perturbation.py  plotting.py
src/scgip_lab/: embeddings.py  evaluation.py  io.py  labels.py  plotting.py
